--- a/用html制作个人简历/cv.html
+++ b/用html制作个人简历/cv.html
@@ -7,6 +7,34 @@
         <title>个人简历</title>
     </head>
     <body>
-        
+        <h1>个人简历</h1>
+        <h2>个人信息</h2>
+        <ul>
+            <li>姓名：xxx</li>
+            <li>籍贯：xxxxx</li>
+            <li>出生年月：xxxxxxx</li>
+            <li>毕业院校：xxxxx</li>
+            <li>手机号码：xxxxxx</li>
+            <li>邮箱：xxxxxxx</li>
+        </ul>
+        <h2>教育背景</h2>
+        <p>xxxxxxxxxxx</p>
+        <p>xxxxxx</p>
+        <h2>实习经历</h2>
+        <span>xxxxxx</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <span>xxxxxx</span>&nbsp;&nbsp;&nbsp;&nbsp;
+        <span>xxx</span>
+        <p>xxxxxxxxxxx</p>
+        <h2>校园经历</h2>
+        <span>xxxxxx</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <span>xxxxxx</span>&nbsp;&nbsp;&nbsp;&nbsp;
+        <span>xxx</span>
+        <p>xxxxxxxxxxx</p>
+        <p>xxxxxxxxxxx</p>
+        <p>xxxxxxxxxxx</p>
+        <h3>自我评价</h3>
+        <p>xxxxxxxxxxx</p>
+        <p>xxxxxxxxxxx</p>
+        <p>xxxxxxxxxxx</p>
     </body>
 </html>
